--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           </div>
           <!-- player button and controls -->
           <div id="player-btn" class="player-btn">
-            <button class="btn prev-btn"><i class="fas fa-backward"></i></button>
-            <button class="btn play-btn"><i class="fas fa-play"></i></button>
+            <button type="button" class="btn prev-btn"><i class="fas fa-backward"></i></button>
+            <button type="button" class="btn play-btn"><i class="fas fa-play"></i></button>
             <!-- <button class="btn pause-btn"><i class="fas fa-pause"></i></button>-->
-            <button class="btn next-btn"><i class="fas fa-forward"></i></button>
-            <button class="btn menu-btn"><i class="fa-solid fa-bars"></i></button>
+            <button type="button" class="btn next-btn"><i class="fas fa-forward"></i></button>
+            <button type="button" class="btn menu-btn"><i class="fa-solid fa-bars"></i></button>
           </div>
         </div>
       </div>
